// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays "No Decks available" message if no decks exist 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 6,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    dataTestId="loading"
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 20,
      }
    }
  >
    No Decks available to show.
  </Text>
  ;
</View>
`;

exports[`displays "loading" message while decks are not loaded 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 6,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    dataTestId="loading"
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 20,
      }
    }
  >
    Loading Decks...
  </Text>
  ;
</View>
`;

exports[`displays all decks when decks are loaded and exist 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 6,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    dataTestId="loading"
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 20,
      }
    }
  >
    No Decks available to show.
  </Text>
  ;
</View>
`;

exports[`renders without crashing 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 6,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    dataTestId="loading"
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 20,
      }
    }
  >
    Loading Decks...
  </Text>
  ;
</View>
`;
